--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Recreate world clock using React.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node seed.js",
+    "watch": "nodemon",
+    "bundle": "browserify client/index.js -t babelify -o server/public/bundle.js",
+    "bundle:watch": "watchify client/index.js -vd -t babelify -o server/public/bundle.js"
   },
   "repository": {
     "type": "git",
