--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node server/seed.js",
     "watch": "nodemon client/index.js",
-    "bundle": "browserify client/index.js -t babelify -o server/public/bundle.js",
-    "bundle:watch": "watchify client/index.js -vd -t babelify -o server/public/bundle.js"
+    "bundle": "browserify client/public/main.js -t babelify -o server/public/bundle.js",
+    "bundle:watch": "watchify client/public/main.js -vd -t babelify -o server/public/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,9 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
+    "babelrc-install": "^2.0.0",
     "browserify": "^14.5.0",
     "express": "^4.16.2",
     "mongodb": "^2.2.33",
