--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node server/seed.js",
     "watch": "nodemon client/index.js",
-    "bundle": "browserify client/public/clock.js -t babelify -o server/public/bundle.js",
-    "bundle:watch": "watchify client/public/clock.js -vd -t babelify -o server/public/bundle.js"
+    "bundle": "browserify client/public/*.js -t babelify -o server/public/bundle.js",
+    "bundle:watch": "watchify client/public/*.js -vd -t babelify -o server/public/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,8 @@
     "babelrc-install": "^2.0.0",
     "browserify": "^14.5.0",
     "express": "^4.16.2",
+    "moment": "^2.19.2",
+    "moment-timezone": "^0.5.14",
     "mongodb": "^2.2.33",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
